# ContractSwarm

./: .gitignore  CLAUDE.md  README.md
agents/: .env.example  agent_config.yaml.example  db.py  models.py  orchestrator.py  pdf_extractor.py  prompts.py  pyproject.toml  result_parser.py  server.py
examples/thenvoi/: .env.example  CLAUDE.md  agent_config.yaml.example  chatroom_demo.py  chatroom_thenvoi.py  pyproject.toml
midpage/: api_reference.md  claude_agent_example.py  strands_example.py
scripts/: generate-sample-contracts.py  setup-db.sql
web/: drizzle.config.ts  package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/assessments/: route.ts
web/src/app/api/assessments/[id]/: route.ts
web/src/app/api/assessments/[id]/export/: route.ts
web/src/app/api/assessments/[id]/graph/: route.ts
web/src/app/api/assessments/[id]/report/: route.ts
web/src/app/api/assessments/[id]/rooms/: route.ts
web/src/app/api/contracts/: route.ts
web/src/app/assessment/[id]/: layout.tsx
web/src/app/assessment/[id]/graph/: page.tsx
web/src/app/assessment/[id]/report/: page.tsx
web/src/app/assessment/[id]/swarm/: page.tsx
web/src/app/landing/: page.tsx
web/src/components/: agent-room.tsx  assessment-tabs.tsx  graph-nodes.tsx  graph-sidebar.tsx  logo.tsx  message-bubble.tsx  nav-sidebar.tsx  providers.tsx  risk-badge.tsx  status-badge.tsx  top-nav.tsx  typing-indicator.tsx  violation-card.tsx
web/src/hooks/: use-assessment.ts  use-event-source.ts
web/src/lib/: constants.ts  db.ts  queries.ts  schema.ts  types.ts
(+1 files in other folders)
